--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="theme-color" content="#2C2738">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" name="description">
+    <title>加藤零のポートフォリオ</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+
+    <meta property="og:title" content="加藤零のポートフォリオ" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://portfolio-ray.web.app/" />
+    <meta property="og:image" content="https://portfolio-ray.web.app/favicon.png" />
+    <meta property="og:site_name" content="加藤零のポートフォリオ" />
+    <meta property="og:description" content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@npx_cut0" />
+    <meta name="twitter:creator" content="@npx_cut0" />
+    <meta property="twitter:title" content="Cut0's Portfolio" />
+    <meta property="twitter:url" content="https://portfolio-ray.web.app/" />
+    <meta property="twitter:description" content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" />
+    <meta property="twitter:image" content="https://portfolio-ray.web.app/favicon.png" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Cut0">
+
+    <meta name="google-site-verification" content="_0wqUvSEdA9gVzNhXJjGq6juNfhMd_qzn98Wo8yP0YI">
+    <meta name="apple-mobile-web-app-title" content="IdMmVPUrIRYDZkDdeSL_13VMwBnhjRKHQfJ94rLCFvE">
   </head>
   <body>
     <noscript>
