高速化した

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <meta content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" name="description">
     <title>加藤零のポートフォリオ</title>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link  rel="preload"as="style" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
     <meta property="og:title" content="加藤零のポートフォリオ" />
     <meta property="og:type" content="website" />
