firebaseに接続した

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
     <meta name="theme-color" content="#2C2738">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" name="description">
-    <title>加藤零のポートフォリオ</title>
+    <meta name="description" content="東京理科大学工学部情報工学科所属の加藤零(Cut0)のポートフォリオサイトです。QiitaもGitHubもZennもこの名前です。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。最近はTypeScript+Vue(Composition API)やNode.js(TypeORM+Nest.js)で遊んでます。">
+    <title>Cut0's Portfolio</title>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link  rel="preload"as="style" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
-    <meta property="og:title" content="加藤零のポートフォリオ" />
+    <meta property="og:title" content="Cut'0 Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://portfolio-ray.web.app/" />
     <meta property="og:image" content="https://portfolio-ray.web.app/favicon.png" />
-    <meta property="og:site_name" content="加藤零のポートフォリオ" />
+    <meta property="og:site_name" content="Cut'0 Portfolio" />
     <meta property="og:description" content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" />
 
     <meta name="twitter:card" content="summary" />
