--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>CutRay</title>
     <meta charset="utf-8">
     <meta name="theme-color" content="#2C2738">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="東京理科大学工学部情報工学科所属の加藤零(Cut0)のポートフォリオサイトです。QiitaもGitHubもZennもこの名前です。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。最近はTypeScript+Vue(Composition API)やNode.js(TypeORM+Nest.js)で遊んでます。">
-    <title>Cut0's Portfolio</title>
+    <meta name="description" content="東京理科大学工学部情報工学科所属の加藤零(CutRay)のポートフォリオサイトです。QiitaもGitHubもZennもCutRayです。フロントエンドエンジニアとしてweb開発のインターンに参加しています。">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link  rel="preload"as="style" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
-    <meta property="og:title" content="Cut'0 Portfolio" />
+    <meta property="og:title" content="CutRay Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://portfolio-ray.web.app/" />
     <meta property="og:image" content="https://portfolio-ray.web.app/favicon.png" />
-    <meta property="og:site_name" content="Cut'0 Portfolio" />
+    <meta property="og:site_name" content="CutRay Portfolio" />
     <meta property="og:description" content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@npx_cut0" />
     <meta name="twitter:creator" content="@npx_cut0" />
-    <meta property="twitter:title" content="Cut0's Portfolio" />
+    <meta property="twitter:title" content="CutRay Portfolio" />
     <meta property="twitter:url" content="https://portfolio-ray.web.app/" />
-    <meta property="twitter:description" content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" />
+    <meta property="twitter:description" content="東京理科大学工学部情報工学科所属の加藤零(CutRay)のポートフォリオサイトです。QiitaもGitHubもZennもCutRayです。フロントエンドエンジニアとしてweb開発のインターンに参加しています。" />
     <meta property="twitter:image" content="https://portfolio-ray.web.app/favicon.png" />
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Cut0">
+    <meta name="apple-mobile-web-app-title" content="CutRay">
 
     <meta name="google-site-verification" content="_0wqUvSEdA9gVzNhXJjGq6juNfhMd_qzn98Wo8yP0YI">
     <meta name="apple-mobile-web-app-title" content="IdMmVPUrIRYDZkDdeSL_13VMwBnhjRKHQfJ94rLCFvE">
