--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,17 @@
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link  rel="preload"as="style" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
-    <meta property="og:title" content="CutRay Portfolio" />
+    <meta property="og:title" content="'CutRay's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://portfolio-ray.web.app/" />
     <meta property="og:image" content="https://portfolio-ray.web.app/favicon.png" />
-    <meta property="og:site_name" content="CutRay Portfolio" />
+    <meta property="og:site_name" content="CutRay's Portfolio" />
     <meta property="og:description" content="東京理科大学工学部情報工学科所属の加藤零(@npx_cut0)のポートフォリオサイトです。フロントエンドエンジニアとしてプログラミングのインターンに参加しています。" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@npx_cut0" />
     <meta name="twitter:creator" content="@npx_cut0" />
-    <meta property="twitter:title" content="CutRay Portfolio" />
+    <meta property="twitter:title" content="CutRay's Portfolio" />
     <meta property="twitter:url" content="https://portfolio-ray.web.app/" />
     <meta property="twitter:description" content="東京理科大学工学部情報工学科所属の加藤零(CutRay)のポートフォリオサイトです。QiitaもGitHubもZennもCutRayです。フロントエンドエンジニアとしてweb開発のインターンに参加しています。" />
     <meta property="twitter:image" content="https://portfolio-ray.web.app/favicon.png" />
