--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CutRay</title>
+    <title>I'm CutRay</title>
     <meta charset="utf-8">
     <meta name="theme-color" content="#2C2738">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <meta name="description" content="東京理科大学工学部情報工学科所属の加藤零(CutRay)のポートフォリオサイトです。QiitaもGitHubもZennもCutRayです。フロントエンドエンジニアとしてweb開発のインターンに参加しています。">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link  rel="preload"as="style" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link  rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
     <meta property="og:title" content="'CutRay's Portfolio" />
     <meta property="og:type" content="website" />
