デザインと修正

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="東京理科大学工学部情報工学科所属の加藤零(CutRay)のポートフォリオサイトです。QiitaもGitHubもZennもCutRayです。フロントエンドエンジニアとしてweb開発のインターンに参加しています。"  />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@npx_cut0" />
+    <meta name="twitter:site" content="https://portfolio-ray.web.app/" />
     <meta name="twitter:creator" content="@npx_cut0" />
     <meta property="twitter:title" content="CutRay's Portfolio" />
     <meta property="twitter:url" content="https://portfolio-ray.web.app/" />
