index.htmmlを編集した

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>I'm CutRay</title>
+    <title>CutRay</title>
     <meta charset="utf-8">
     <meta name="theme-color" content="#2C2738">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
     <meta name="twitter:creator" content="@npx_cut0" />
     <meta property="twitter:title" content="CutRay's Portfolio" />
     <meta property="twitter:url" content="https://portfolio-ray.web.app/" />
-    <meta property="twitter:description" content="東京理科大学工学部情報工学科所属の加藤零(CutRay)のポートフォリオサイトです。QiitaもGitHubもZennもCutRayです。フロントエンドエンジニアとしてweb開発のインターンに参加しています。" />
+    <meta property="twitter:description" content="東京理科大学工学部情報工学科所属の加藤零(CutRay)のポートフォリオサイトです。QiitaもGitHubもZennもCutRayです。フロントエンドエンジニアとしてweb開発のインターンに参加しています。最近はVue.jsや(Nest.js+TypeORM)などのTypeScriptを用いた開発がメインになっています。オンライン授業が意外と大変です。" />
     <meta property="twitter:image" content="https://portfolio-ray.web.app/favicon.png" />
 
     <meta name="apple-mobile-web-app-capable" content="yes">
